fix nav gap and wrap

--- a/lesson_16/css/style.css
+++ b/lesson_16/css/style.css
@@ -149,7 +149,7 @@ body.menu-opened {
 
 .nav__list {
   display: flex;
-  gap: 5px 30px;
+  gap: 30px;
 
   /*mobile*/
   flex-direction: column;
@@ -190,6 +190,7 @@ body.menu-opened {
     align-items: flex-start;
     height: auto;
     flex-wrap: wrap;
+    gap: 5px 30px;
   }
 }
 
